Правка кода после ревью 1) Внедрение констант 2) Добавление использования @BeforeEach 3) Исправление наименований методов в соответствии с шаблоном MethodName_StateUnderTest_ExpectedBehavior 4) Добавление GWT и @DisplayName для повышения читаемости