@@ -1,58 +1,58 @@
 package test;
 
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import ru.yandex.javacourse.manager.InMemoryTaskManager;
 import ru.yandex.javacourse.manager.TaskManager;
 import ru.yandex.javacourse.tasks.Status;
 import ru.yandex.javacourse.tasks.Task;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
+@DisplayName("Тестирование истории просмотров задач")
 class InMemoryHistoryManagerTest {
+    private TaskManager manager;
+    private static final int TASK_ID = 0;
+    private static final String TASK_TITLE = "Задача 1";
+    private static final String TASK_DESCRIPTION = "Описание задачи 1";
+    private static final Status TASK_STATUS = Status.NEW;
+
+    @BeforeEach
+    public void beforeEach() {
+        manager = new InMemoryTaskManager();
+    }
 
     @Test
-    public void addNewVersion() {
-        TaskManager manager = new InMemoryTaskManager();
-        Task task1 = new Task(0, "Задача 1", "Описание задачи 1", Status.NEW);
+    @DisplayName("История должна сохранять первоначальную версию задачи после её изменения")
+    public void getHistory_AfterUpdatingTask_ReturnsOriginalVersion() {
+        // Given: Подготовка менеджера и задачи
+        Task task1 = new Task(TASK_ID, TASK_TITLE, TASK_DESCRIPTION, TASK_STATUS);
         manager.addTask(task1);
 
+        // When: Изменяем задачу и добавляем её снова
         task1.setDescription("Новое описание задачи");
         manager.addTask(task1);
 
-        Task fromHistory = manager.getHistory().get(0);
-
-        assertEquals("Описание задачи 1", fromHistory.getDescription(),
+        // Then: Проверяем что история сохранила первоначальное значение
+        Task fromHistory = manager.getHistory().getFirst();
+        assertEquals(TASK_DESCRIPTION, fromHistory.getDescription(),
                 "История должна хранить первоначальное значение");
     }
 
     @Test
-    public void checkFirstElementInHistory () {
-        TaskManager manager = new InMemoryTaskManager();
-        Task task1 = new Task(1, "Задача 1", "Описание задачи 1", Status.NEW);
-        manager.addTask(task1);
-        Task task2 = new Task(2, "Задача 2", "Описание задачи 2", Status.NEW);
-        manager.addTask(task2);
-        Task task3 = new Task(3, "Задача 3", "Описание задачи 3", Status.NEW);
-        manager.addTask(task3);
-        Task task4 = new Task(4, "Задача 4", "Описание задачи 4", Status.NEW);
-        manager.addTask(task4);
-        Task task5 = new Task(5, "Задача 5", "Описание задачи 5", Status.NEW);
-        manager.addTask(task5);
-        Task task6 = new Task(6, "Задача 6", "Описание задачи 6", Status.NEW);
-        manager.addTask(task6);
-        Task task7 = new Task(7, "Задача 7", "Описание задачи 7", Status.NEW);
-        manager.addTask(task7);
-        Task task8 = new Task(8, "Задача 8", "Описание задачи 8", Status.NEW);
-        manager.addTask(task8);
-        Task task9 = new Task(9, "Задача 9", "Описание задачи 9", Status.NEW);
-        manager.addTask(task9);
-        Task task10 = new Task(10, "Задача 10", "Описание задачи 10", Status.NEW);
-        manager.addTask(task10);
-        Task task11 = new Task(11, "Задача 11", "Описание задачи 11", Status.NEW);
-        manager.addTask(task11);
+    @DisplayName("История должна сохранять только последние 10 задач при превышении лимита")
+    public void getHistory_WhenAdded11Tasks_FirstItemIsTask2() {
+        // Given: Создание и добавление в manager 11 задач
+        for (int i = 1; i <= 11; i++) {
+            Task task = new Task(i, "Задача " + i, "Описание " + i, Status.NEW);
+            // When: Добавляем задачу в менеджер
+            manager.addTask(task);
+        }
 
-        assertEquals(task2,manager.getHistory().getFirst(),"После добавления 11 задач," +
-                " 2 строка должна быть первой в истории");
+        // Then: Проверяем что: Вторая задача стала первой в истории
+        assertEquals("Описание 2", manager.getHistory().getFirst().getDescription(), "После добавления 11 задач," +
+                " 2 задача должна быть первой в истории");
 
     }
 }
